--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <p class="text-[20px] leading-[30px] text-[#3C2769]">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique duis Cursus mi quis viverra ornare.</p>
                     <div class="flex gap-[16px] align-center"> 
                         <button class="w-[143px] py-[17px] bg-[#CF4D74] text-[16px] leading-[24px]   rounded-[64px]">Shop now</button>
-                        <button class="w-[138px] py-[17px] text-[16px] leading-[24px] border-2 border-[#CDD5DF] rounded-[64px]">Our story</button>
+                        <button class="w-[138px] py-[17px] text-[16px] text-[white] leading-[24px] border-2 border-[#CDD5DF] rounded-[64px]">Our story</button>
                     </div>
                 </div>
                 <div class=" mt-[209px]" >
